crates/libs/frieze/tests/ui/enum_adjacent_tagged.stderr
error: frieze: adjacent tagging (`#[serde(tag = "...", content = "...")]`) is not supported. Use an internal tag without `content` instead: `#[serde(tag = "kind")]`.
  --> tests/ui/enum_adjacent_tagged.rs:12:23
   |
12 | #[serde(tag = "kind", content = "data")]
   |                       ^^^^^^^^^^^^^^^^
